# format

./: CMakeLists.txt  format.cpp
constexpr_test/: CMakeLists.txt  constexpr.cpp  test.cpp
include/: _common.hpp  _iter.hpp  _writer.hpp  format.hpp
test/: CMakeLists.txt  constexpr.cpp  converter.hpp  format_error.cpp  format_to_n.cpp  formatted_size.cpp  formatters.cpp  formatters_static.cpp  hello_world.cpp  invalid.cpp  locale.cpp  locales.hpp  make_format_args.cpp  output.cpp  representable_as_char.cpp  small_args.cpp  std_examples.cpp  test.cpp  user_defined.hpp
